# Local_LLM_Prompt_Enhancer

./: .gitignore  BUGFIX_PONY_FORMAT.md  BUGFIX_TEXT_TO_IMAGE_SEED.md  BUGFIX_VISION_FALLBACK.md  CHANGELOG.md  COMMIT_PREP.md  ENHANCEMENT_COMPLETE_v1.8.1.md  ENHANCEMENT_v1.8.1.md  LICENSE  README.md  REFERENCE_MODE_GUIDE.md  RELEASE_NOTES_v1.8.0.md  VISION_BACKEND_GUIDE.md  WAN22_ALIGNMENT_ANALYSIS.md  __init__.py  caption-insructions.md  expansion_engine.py  image_to_image_node.py  image_to_video_node.py  img2img_expansion_engine.py  llm_backend.py  platforms.py  presets.py  prompt_expander_node.py  prompt_expander_node_advanced.py  pyproject.toml  qwen3_vl_backend.py  requirements.txt  text_to_image_node.py  utils.py  v1.9.0_IMPLEMENTATION_COMPLETE.md  v1.9.1_ENHANCEMENTS.md
docs/: ADVANCED_NODE_REDESIGN.md  BUGFIX_ADVANCED_NODE.md  BUGFIX_AUTO_MODE.md  BUGFIX_SUMMARY.md  BUGFIX_V161.md  CONFIGURATION.md  IMG2IMG_GUIDE.md  LM_STUDIO_SETUP.md  NODE_COMPARISON.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_REF_V17.md  README_OLD.md  TESTING_GUIDE_V161.md  TXT2IMG_GUIDE.md  UPDATE_NOTES_V12.md  UPDATE_V15.md  UPDATE_V16_ERIC.md  WAN_GUIDE_REFERENCE.md  WILDCARD_GUIDE.md  Wan2.2_Director_System_Prompt.md  Wan2.2_Prompt_Design_Guide.md
docs/archive/: FILE_CHANGES.md  GITHUB_PUBLICATION_COMPLETE.md  SETUP_COMPLETE.md  UPDATE_NOTES.md  UPDATE_V13.md  UPDATE_V17_ENHANCED_CONTROLS.md
